# dense_direction

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  train.py
.github/workflows/: ci.yml  publish.yml  test.yml
configs/: base_config.py
configs/_base_/: base_config.py
configs/_base_/datasets/: concrete_cracks.py  ottawa_roads.py
configs/_base_/schedulers/: adamw_onecycle_10k.py  adamw_onecycle_5k.py
configs/dir/: dinov2_dpt_concrete_cracks_10k.py  dinov2_dpt_ottawa_roads_10k.py  dinov2_linear_concrete_cracks_10k.py  dinov2_linear_ottawa_roads_10k.py  dinov2_multiscale_dpt_concrete_cracks_10k.py  dinov2_multiscale_dpt_ottawa_roads_10k.py  dinov2_multiscale_linear_concrete_cracks_10k.py  dinov2_multiscale_linear_ottawa_roads_10k.py
configs/seg_dir/: dinov2_concrete_cracks_10k.py  dinov2_dpt_concrete_cracks_10k.py  dinov2_dpt_ottawa_roads_10k.py  dinov2_multiscale_concrete_cracks_10k.py  dinov2_multiscale_dpt_concrete_cracks_10k.py  dinov2_multiscale_dpt_ottawa_roads_10k.py  dinov2_multiscale_ottawa_roads_10k.py  dinov2_ottawa_roads_10k.py
data/: DATASETS.md
dense_direction/: __init__.py
dense_direction/data/: __init__.py
dense_direction/evaluation/: __init__.py
dense_direction/modeling/: __init__.py
dense_direction/visualization/: __init__.py  seg_dir_visualizer.py
docs/: CONFIG.md  INSTALL.md  README.md  RESULTS.md  SETUP.md  USAGE.md
src/dense_direction/: __init__.py
src/dense_direction/data/: __init__.py
tests/: test_imports.py  test_registers.py
tools/: run.py
tools/datasets/: ottawa_roads.py
(+94 files in other folders)
