[project]
name = "dense_direction"
version = "0.1.0"
description = "Framework for dense direction estimation of linear objects in images."
readme = "README.md"
authors = [{name = "Bartosz Wójcik"}]
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.3",
    "opencv-python==4.9.0.80",
    "ftfy==6.2.0",
    "regex==2023.12.25",
]

[project.optional-dependencies]
dev = [
    "regex==2023.12.25",
    "ruff==0.15.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src"]
include = ["dense_direction*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["B028"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_return_any = false
disallow_incomplete_defs = true
check_untyped_defs = true
